tests/dataset/tpc-ds/compiler/c/q47.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:42Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:42Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
static int year = 2020;
static char *orderby = "item";

typedef struct {
  int d_year;
  const char *item;
  double avg_monthly_sales;
  double sum_sales;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_year;
  const char *item;
  double avg_monthly_sales;
  double sum_sales;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_year;
  const char *item;
  double avg_monthly_sales;
  double sum_sales;
} v2_t;
typedef struct {
  int len;
  v2_t *data;
} v2_list_t;
v2_list_t create_v2_list(int len) {
  v2_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(v2_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_year;
  const char *item;
  double avg_monthly_sales;
  double sum_sales;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

double abs(double x) {
  if (x >= 0.0) {
    return x;
  } else {
    return (-x);
  }
}

static list_int test_TPCDS_Q47_simplified_result;
static void test_TPCDS_Q47_simplified() {
  tmp1_t tmp1[] = {(tmp1_t){.d_year = 2019,
                            .item = "C",
                            .avg_monthly_sales = 50.0,
                            .sum_sales = 60.0},
                   (tmp_item_t){.d_year = 2020,
                                .item = "A",
                                .avg_monthly_sales = 100.0,
                                .sum_sales = 120.0}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q47_simplified_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q47_simplified_result.len; i3++) {
      if (test_TPCDS_Q47_simplified_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  v2_t v2[] = {(v2_t){.d_year = 2020,
                      .item = "A",
                      .avg_monthly_sales = 100.0,
                      .sum_sales = 120.0},
               (v2_t){.d_year = 2020,
                      .item = "B",
                      .avg_monthly_sales = 80.0,
                      .sum_sales = 70.0},
               (v2_t){.d_year = 2019,
                      .item = "C",
                      .avg_monthly_sales = 50.0,
                      .sum_sales = 60.0}};
  int v2_len = sizeof(v2) / sizeof(v2[0]);
  result_item_list_t tmp4 = create_result_item_list(v2_len);
  int *tmp7 = (int *)malloc(sizeof(int) * v2_len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < v2_len; tmp6++) {
    v2_t v = v2[tmp6];
    if (!(v.d_year >= year - 1 && v.avg_monthly_sales > 0 &&
          v.sum_sales > v.avg_monthly_sales &&
          abs(v.sum_sales - v.avg_monthly_sales) / v.avg_monthly_sales > 0.1)) {
      continue;
    }
    tmp4.data[tmp5] = (result_item_t){.d_year = v.d_year,
                                      .item = v.item,
                                      .avg_monthly_sales = v.avg_monthly_sales,
                                      .sum_sales = v.sum_sales};
    list_int result = list_int_create(2);
    result.data[0] = v.sum_sales - v.avg_monthly_sales;
    result.data[1] = v.item;
    tmp7[tmp5] = result;
    tmp5++;
  }
  tmp4.len = tmp5;
  for (int i10 = 0; i10 < tmp5 - 1; i10++) {
    for (int i11 = i10 + 1; i11 < tmp5; i11++) {
      if (tmp7[i10] > tmp7[i11]) {
        int tmp8 = tmp7[i10];
        tmp7[i10] = tmp7[i11];
        tmp7[i11] = tmp8;
        result_item_t tmp9 = tmp4.data[i10];
        tmp4.data[i10] = tmp4.data[i11];
        tmp4.data[i11] = tmp9;
      }
    }
  }
  result_item_list_t result = tmp4;
  printf("[");
  for (int i12 = 0; i12 < 2; i12++) {
    if (i12 > 0)
      printf(",");
    result_item_t it = result.data[i12];
    printf("{");
    _json_string("d_year");
    printf(":");
    _json_int(it.d_year);
    printf(",");
    _json_string("item");
    printf(":");
    _json_string(it.item);
    printf(",");
    _json_string("avg_monthly_sales");
    printf(":");
    _json_float(it.avg_monthly_sales);
    printf(",");
    _json_string("sum_sales");
    printf(":");
    _json_float(it.sum_sales);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q47_simplified_result = result;
  test_TPCDS_Q47_simplified();
  free(result.data);
  return 0;
}
